fix: small fixes
Signed-off-by: KXLAA <kolade.afode@yahoo.com>

--- a/posts/a-gentle-guide-to-pagination-in-graphql.mdx
+++ b/posts/a-gentle-guide-to-pagination-in-graphql.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Drag & drop in React with Dnd Kit"
-description: "A simple guide to get started with Dnd Kit in React."
+title: "A gentle guide to pagination in GraphQL"
+description: "Pagination is a common requirement in web applications. In this post, we will learn how to implement pagination in GraphQL."
 coverImage: "/assets/blog/dynamic-routing/cover.jpg"
 date: "2022-12-18"
 author:
@@ -24,4 +24,4 @@ It is important to note that these categories are not mutually exclusive. We can
 
 Go back [Home](/).
 
-//https://dev.to/franciscomendes10866/how-to-implement-drag-and-drop-in-react-3j8j
+//https://www.pdftron.com/blog/graphql/implementing-graphql-pagination/
