--- a/posts/building-component-libraries-in-react-with-tailwindcss-and-radix-ui.mdx
+++ b/posts/building-component-libraries-in-react-with-tailwindcss-and-radix-ui.mdx
@@ -4,7 +4,7 @@ description: "How we built the Super Component Library"
 coverImage: "/assets/blog/dynamic-routing/cover.jpg"
 date: "2019-03-20"
 author:
-  name: JJ Kasper
+  name: Kolade Afode
   picture: "/assets/blog/authors/jj.jpeg"
 ogImage:
   url: "/assets/blog/dynamic-routing/cover.jpg"
