--- a/posts/taming-url-paths-in-nextjs-with-react-hooks.mdx
+++ b/posts/taming-url-paths-in-nextjs-with-react-hooks.mdx
@@ -4,7 +4,7 @@ description: "How do we tame the beast that is form management in React?"
 coverImage: "/assets/blog/dynamic-routing/cover.jpg"
 date: "2022-10-16T05:35:07.322Z"
 author:
-  name: JJ Kasper
+  name: Kolade Afode
   picture: "/assets/blog/authors/jj.jpeg"
 ogImage:
   url: "/assets/blog/dynamic-routing/cover.jpg"
