--- a/posts/learn-typescript-generics-by-reimplementing-lodash-utilities.mdx
+++ b/posts/learn-typescript-generics-by-reimplementing-lodash-utilities.mdx
@@ -4,7 +4,7 @@ description: "Come to grips with Typescript Generics once and for all"
 coverImage: "/assets/blog/dynamic-routing/cover.jpg"
 date: "2021-05-16T05:35:07.322Z"
 author:
-  name: JJ Kasper
+  name: Kolade Afode
   picture: "/assets/blog/authors/jj.jpeg"
 ogImage:
   url: "/assets/blog/dynamic-routing/cover.jpg"
