--- a/posts/a-gentle-guide-to-pagination-in-graphql.mdx
+++ b/posts/a-gentle-guide-to-pagination-in-graphql.mdx
@@ -25,3 +25,102 @@ It is important to note that these categories are not mutually exclusive. We can
 Go back [Home](/).
 
 //https://www.pdftron.com/blog/graphql/implementing-graphql-pagination/
+
+DnD Kit is a lightweight, highly configurable and accessible library that makes creating drag-and-drop interactions with react easy. In this post, I explain the core concepts behind DnD Kit and implement a variety of examples that demonstrate the core features of the library. In the end, we will put everything we have learned together and build a form builder application similar to Google Form using DnD Kit.
+
+## Core Concepts
+
+For the purposes of the DnD kit, we can place drag-and-drop interaction into two broad categories:
+
+- **Default** - In this category, we have distinct components which are either draggable or droppable's into which draggable components can be dragged and dropped over.
+- **Sortables** - In this category components are both draggable and dropable, and they rearrange or sort as a single component is dragged.
+
+It is important to note that these categories are not mutually exclusive. We can build drag-and-drop interactions which combine elements of both categories, this is usually the case in more advanced drag-and-drop interfaces.
+
+DnD Kit is a lightweight, highly configurable and accessible library that makes creating drag-and-drop interactions with react easy. In this post, I explain the core concepts behind DnD Kit and implement a variety of examples that demonstrate the core features of the library. In the end, we will put everything we have learned together and build a form builder application similar to Google Form using DnD Kit.
+
+## Core Concepts
+
+For the purposes of the DnD kit, we can place drag-and-drop interaction into two broad categories:
+
+- **Default** - In this category, we have distinct components which are either draggable or droppable's into which draggable components can be dragged and dropped over.
+- **Sortables** - In this category components are both draggable and dropable, and they rearrange or sort as a single component is dragged.
+
+It is important to note that these categories are not mutually exclusive. We can build drag-and-drop interactions which combine elements of both categories, this is usually the case in more advanced drag-and-drop interfaces.
+
+DnD Kit is a lightweight, highly configurable and accessible library that makes creating drag-and-drop interactions with react easy. In this post, I explain the core concepts behind DnD Kit and implement a variety of examples that demonstrate the core features of the library. In the end, we will put everything we have learned together and build a form builder application similar to Google Form using DnD Kit.
+
+## Core Concepts
+
+For the purposes of the DnD kit, we can place drag-and-drop interaction into two broad categories:
+
+- **Default** - In this category, we have distinct components which are either draggable or droppable's into which draggable components can be dragged and dropped over.
+- **Sortables** - In this category components are both draggable and dropable, and they rearrange or sort as a single component is dragged.
+
+It is important to note that these categories are not mutually exclusive. We can build drag-and-drop interactions which combine elements of both categories, this is usually the case in more advanced drag-and-drop interfaces.
+
+DnD Kit is a lightweight, highly configurable and accessible library that makes creating drag-and-drop interactions with react easy. In this post, I explain the core concepts behind DnD Kit and implement a variety of examples that demonstrate the core features of the library. In the end, we will put everything we have learned together and build a form builder application similar to Google Form using DnD Kit.
+
+## Core Concepts
+
+For the purposes of the DnD kit, we can place drag-and-drop interaction into two broad categories:
+
+- **Default** - In this category, we have distinct components which are either draggable or droppable's into which draggable components can be dragged and dropped over.
+- **Sortables** - In this category components are both draggable and dropable, and they rearrange or sort as a single component is dragged.
+
+It is important to note that these categories are not mutually exclusive. We can build drag-and-drop interactions which combine elements of both categories, this is usually the case in more advanced drag-and-drop interfaces.
+
+DnD Kit is a lightweight, highly configurable and accessible library that makes creating drag-and-drop interactions with react easy. In this post, I explain the core concepts behind DnD Kit and implement a variety of examples that demonstrate the core features of the library. In the end, we will put everything we have learned together and build a form builder application similar to Google Form using DnD Kit.
+
+## Core Concepts
+
+For the purposes of the DnD kit, we can place drag-and-drop interaction into two broad categories:
+
+- **Default** - In this category, we have distinct components which are either draggable or droppable's into which draggable components can be dragged and dropped over.
+- **Sortables** - In this category components are both draggable and dropable, and they rearrange or sort as a single component is dragged.
+
+It is important to note that these categories are not mutually exclusive. We can build drag-and-drop interactions which combine elements of both categories, this is usually the case in more advanced drag-and-drop interfaces.
+
+DnD Kit is a lightweight, highly configurable and accessible library that makes creating drag-and-drop interactions with react easy. In this post, I explain the core concepts behind DnD Kit and implement a variety of examples that demonstrate the core features of the library. In the end, we will put everything we have learned together and build a form builder application similar to Google Form using DnD Kit.
+
+## Core Concepts
+
+For the purposes of the DnD kit, we can place drag-and-drop interaction into two broad categories:
+
+- **Default** - In this category, we have distinct components which are either draggable or droppable's into which draggable components can be dragged and dropped over.
+- **Sortables** - In this category components are both draggable and dropable, and they rearrange or sort as a single component is dragged.
+
+It is important to note that these categories are not mutually exclusive. We can build drag-and-drop interactions which combine elements of both categories, this is usually the case in more advanced drag-and-drop interfaces.
+
+DnD Kit is a lightweight, highly configurable and accessible library that makes creating drag-and-drop interactions with react easy. In this post, I explain the core concepts behind DnD Kit and implement a variety of examples that demonstrate the core features of the library. In the end, we will put everything we have learned together and build a form builder application similar to Google Form using DnD Kit.
+
+## Core Concepts
+
+For the purposes of the DnD kit, we can place drag-and-drop interaction into two broad categories:
+
+- **Default** - In this category, we have distinct components which are either draggable or droppable's into which draggable components can be dragged and dropped over.
+- **Sortables** - In this category components are both draggable and dropable, and they rearrange or sort as a single component is dragged.
+
+It is important to note that these categories are not mutually exclusive. We can build drag-and-drop interactions which combine elements of both categories, this is usually the case in more advanced drag-and-drop interfaces.
+
+DnD Kit is a lightweight, highly configurable and accessible library that makes creating drag-and-drop interactions with react easy. In this post, I explain the core concepts behind DnD Kit and implement a variety of examples that demonstrate the core features of the library. In the end, we will put everything we have learned together and build a form builder application similar to Google Form using DnD Kit.
+
+## Core Concepts
+
+For the purposes of the DnD kit, we can place drag-and-drop interaction into two broad categories:
+
+- **Default** - In this category, we have distinct components which are either draggable or droppable's into which draggable components can be dragged and dropped over.
+- **Sortables** - In this category components are both draggable and dropable, and they rearrange or sort as a single component is dragged.
+
+It is important to note that these categories are not mutually exclusive. We can build drag-and-drop interactions which combine elements of both categories, this is usually the case in more advanced drag-and-drop interfaces.
+
+DnD Kit is a lightweight, highly configurable and accessible library that makes creating drag-and-drop interactions with react easy. In this post, I explain the core concepts behind DnD Kit and implement a variety of examples that demonstrate the core features of the library. In the end, we will put everything we have learned together and build a form builder application similar to Google Form using DnD Kit.
+
+## Core Concepts
+
+For the purposes of the DnD kit, we can place drag-and-drop interaction into two broad categories:
+
+- **Default** - In this category, we have distinct components which are either draggable or droppable's into which draggable components can be dragged and dropped over.
+- **Sortables** - In this category components are both draggable and dropable, and they rearrange or sort as a single component is dragged.
+
+It is important to note that these categories are not mutually exclusive. We can build drag-and-drop interactions which combine elements of both categories, this is usually the case in more advanced drag-and-drop interfaces.
