feat: add function to get headings from md string
Signed-off-by: KXLAA <kolade.afode@yahoo.com>

--- a/posts/a-gentle-guide-to-pagination-in-graphql.mdx
+++ b/posts/a-gentle-guide-to-pagination-in-graphql.mdx
@@ -124,3 +124,38 @@ For the purposes of the DnD kit, we can place drag-and-drop interaction into two
 - **Sortables** - In this category components are both draggable and dropable, and they rearrange or sort as a single component is dragged.
 
 It is important to note that these categories are not mutually exclusive. We can build drag-and-drop interactions which combine elements of both categories, this is usually the case in more advanced drag-and-drop interfaces.
+
+### Core Concepts
+
+It is important to note that these categories are not mutually exclusive. We can build drag-and-drop interactions which combine elements of both categories, this is usually the case in more advanced drag-and-drop interfaces.
+
+It is important to note that these categories are not mutually exclusive. We can build drag-and-drop interactions which combine elements of both categories, this is usually the case in more advanced drag-and-drop interfaces.
+
+It is important to note that these categories are not mutually exclusive. We can build drag-and-drop interactions which combine elements of both categories, this is usually the case in more advanced drag-and-drop interfaces.
+
+It is important to note that these categories are not mutually exclusive. We can build drag-and-drop interactions which combine elements of both categories, this is usually the case in more advanced drag-and-drop interfaces.
+
+#### Core Concepts
+
+It is important to note that these categories are not mutually exclusive. We can build drag-and-drop interactions which combine elements of both categories, this is usually the case in more advanced drag-and-drop interfaces.
+
+It is important to note that these categories are not mutually exclusive. We can build drag-and-drop interactions which combine elements of both categories, this is usually the case in more advanced drag-and-drop interfaces.
+It is important to note that these categories are not mutually exclusive. We can build drag-and-drop interactions which combine elements of both categories, this is usually the case in more advanced drag-and-drop interfaces.
+
+##### Core Concepts
+
+It is important to note that these categories are not mutually exclusive. We can build drag-and-drop interactions which combine elements of both categories, this is usually the case in more advanced drag-and-drop interfaces.
+
+It is important to note that these categories are not mutually exclusive. We can build drag-and-drop interactions which combine elements of both categories, this is usually the case in more advanced drag-and-drop interfaces.
+
+It is important to note that these categories are not mutually exclusive. We can build drag-and-drop interactions which combine elements of both categories, this is usually the case in more advanced drag-and-drop interfaces.
+
+###### Core Concepts
+
+It is important to note that these categories are not mutually exclusive. We can build drag-and-drop interactions which combine elements of both categories, this is usually the case in more advanced drag-and-drop interfaces.
+
+It is important to note that these categories are not mutually exclusive. We can build drag-and-drop interactions which combine elements of both categories, this is usually the case in more advanced drag-and-drop interfaces.
+
+It is important to note that these categories are not mutually exclusive. We can build drag-and-drop interactions which combine elements of both categories, this is usually the case in more advanced drag-and-drop interfaces.
+
+It is important to note that these categories are not mutually exclusive. We can build drag-and-drop interactions which combine elements of both categories, this is usually the case in more advanced drag-and-drop interfaces.
