--- a/posts/drag-and-drop-in-react-with-dnd-kit.mdx
+++ b/posts/drag-and-drop-in-react-with-dnd-kit.mdx
@@ -11,17 +11,21 @@ ogImage:
 tags: ["React", "Typescript", "Tutorial"]
 ---
 
-DnD Kit is a lightweight, highly configurable and accessible library that makes creating drag-and-drop interactions with react easy. In this post, I explain the core concepts behind DnD Kit and implement a variety of examples that demonstrate the core features of the library. In the end, we will put everything we have learned together and build a form builder application similar to Google Form using DnD Kit.
+Drag-and-drop UI interactions are very common on the web. It allows users to interact with the applications we create in an intuitive and natural way. Building such interfaces in an accessible and performant way has always been challenging. In this post, we are going to attempt overcome this challenge with the power of DnD Kit, a modular library for building drag & drop interfaces in React.
 
 ## Core Concepts
 
-For the purposes of the DnD kit, we can place drag-and-drop interaction into two broad categories:
+In most drag-and-drop interactions, there are usually two kinds of components involved:
 
-- **Default** - In this category, we have distinct components which are either draggable or droppable's into which draggable components can be dragged and dropped over.
-- **Sortables** - In this category components are both draggable and dropable, and they rearrange or sort as a single component is dragged.
+- **Draggable components** which are elements on a page that we can pick up, drag and drop in specified areas; and
+- **Droppable components**, which are elements that act as the _'specified areas'_ that draggable elements can be dropped over.
 
-It is important to note that these categories are not mutually exclusive. We can build drag-and-drop interactions which combine elements of both categories, this is usually the case in more advanced drag-and-drop interfaces.
+You can see these components in action by playing around in the demo below:
 
-Go back [Home](/).
+<DraggableAndDroppable />
 
-//https://dev.to/franciscomendes10866/how-to-implement-drag-and-drop-in-react-3j8j
+### Draggable Components
+
+DndKit provides us with a React hook called `useDraggable`. This hook can transform any HTML element into a draggable source that can be dragged and dropped over droppable Components.
+
+To break down how this hook works, let's think of the steps that we may need to take to make an HTML element draggable:
