fix: clean up css style class names
Signed-off-by: KXLAA <kolade.afode@yahoo.com>

--- a/posts/drag-and-drop-in-react-with-dnd-kit.mdx
+++ b/posts/drag-and-drop-in-react-with-dnd-kit.mdx
@@ -41,7 +41,7 @@ To make a component draggable, we can use the `useDraggable` hook. This hook tak
 
 Here's an example of how all these elements come together:
 
-```tsx
+```tsx:Draggable.tsx
 function Draggable(props: DraggableProps) {
   const { attributes, listeners, setNodeRef, transform } = useDraggable({
     id: props.id,
