--- a/content/drag-and-drop-in-react-with-dnd-kit.mdx
+++ b/content/drag-and-drop-in-react-with-dnd-kit.mdx
@@ -31,7 +31,7 @@ npm install @dnd-kit/core
 
 To manage interactions between draggable and droppable components, `@dnd-kit/core` also exports a `<DndContext>` component. This component uses the React Context API to share data between draggable and droppable components, so we need to wrap them with it:
 
-```tsx showLineNumbers {2}
+```tsx {2}
 import React from "react";
 import { DndContext } from "@dnd-kit/core";
 import { Draggable } from "./Draggable";
@@ -61,7 +61,7 @@ The `useDraggable` hook is used to make components draggable. It takes an input 
 
 Here's an example of how all these elements come together:
 
-```tsx showLineNumbers
+```tsx
 function Draggable(props: DraggableProps) {
   const { attributes, listeners, setNodeRef, transform } = useDraggable({
     id: props.id,
@@ -94,7 +94,7 @@ The `useDroppable` hook is used to make components Droppable. Similar to `useDra
 
 Here is how of how all these elements come together:
 
-```tsx showLineNumbers
+```tsx
 function Droppable(props: DroppableProps) {
   const { setNodeRef, isOver } = useDroppable({
     id: props.id,
