--- a/content/drag-and-drop-in-react-with-dnd-kit.mdx
+++ b/content/drag-and-drop-in-react-with-dnd-kit.mdx
@@ -47,9 +47,18 @@ function App() {
 }
 ```
 
-> 👍 Success
->
-> The Context API is a great way to share data between components without having to pass props down the component tree. It's also a great way to avoid prop drilling. If you're not familiar with the Context API, I recommend reading [this article](https://kentcdodds.com/blog/how-to-use-react-context-effectively) by Kent C. Dodds.
+### DndContext
+
+The `<DndContext>` context is essential for managing interactions between draggable and droppable components, as well as emitting events at different stages of a drag and drop interaction. We can then react to these events and use the information to update the state of the draggable and droppable components in our UI. The events we can listen to are:
+
+- `onDragStart` triggers when a draggable is dragged. It contains the DragStartEvent object which contains information about the element that has just been dragged.
+- `onDragOver` triggers when a draggable item is moved over a droppable container. It contains the DragOverEvent object which contains information about the draggable item and droppable container which the draggable item was dropped over.
+- `onDragEnd` fires after a draggable item is dropped. This event contains information about the active draggable `id` along with information on whether the draggable item was dropped `over`.
+- `onDragCancel` fires if a drag operation is cancelled, for example, if the user presses `escape` while dragging a draggable item.
+
+You can see these events in action by trying out the demo below:
+
+<DndContextEvents />
 
 ### Draggables
 
@@ -166,3 +175,7 @@ You can see how this is done with the interactive demo below:
 DnD Kit is an awesome library I recently discovered while working on the new dashboard at Super. It makes the complex task of creating performant Drag-and-Drop UI interactions easier, with some interesting patterns and concepts. I spent some time creating a lot of cool interactions with the library and wanted to share some of the things I learned.
 
 DnD Kit is an awesome library I recently discovered while working on the new dashboard at Super. It makes the complex task of creating performant Drag-and-Drop UI interactions easier, with some interesting patterns and concepts. I spent some time creating a lot of cool interactions with the library and wanted to share some of the things I learned.
+
+> 👍 Success
+>
+> The Context API is a great way to share data between components without having to pass props down the component tree. It's also a great way to avoid prop drilling. If you're not familiar with the Context API, I recommend reading [this article](https://kentcdodds.com/blog/how-to-use-react-context-effectively) by Kent C. Dodds.
