--- a/content/drag-and-drop-in-react-with-dnd-kit.mdx
+++ b/content/drag-and-drop-in-react-with-dnd-kit.mdx
@@ -8,30 +8,93 @@ thumbnail: "/assets/blog/dynamic-routing/cover.jpg"
 postId: "drag-and-drop-in-react-with-dnd-kit"
 ---
 
-DnD Kit is an awesome library I recently discovered while working on the new dashboard at Super. It makes the complex task of creating performant Drag-and-Drop UI interactions easier, with some interesting patterns and concepts. I spent some time creating a lot of cool interactions with the library and wanted to share some of the things I learned.
+DnD Kit is an awesome library I recently discovered while working on the new dashboard at Super. It simplifies the complex task of creating performant Drag-and-Drop UI interactions, with some interesting patterns and concepts. I spent some time creating a lot of cool interactions with the library and wanted to share some of the things I learned.
 
-Lets get started
+Let's get started!
 
 ## Core Concepts
 
-In most Drag-and-drop UI interactions, there are usually two types of components involved:
-
-- **Draggable components** which are elements on a page that we can pick up, drag and drop in designated drop areas; and
-- **Droppable components**, which are elements that act as the 'designated drop areas' that draggable elements can be dropped over.
-
-You can see these components in action by playing around in the demo below:
+From a high-level, most drag-and-drop UI interactions involve three main components: a draggable element, a droppable area, and a component or function that manages the interaction between them. The draggable element can be dragged, and the drop area is where it can be dropped. To gain a better understanding of how these components typically work, you can try out the demo below:
 
 <DraggableAndDroppable />
 
-DndKit embraces this concept, providing two essential hooks for applications: useDraggable and useDroppable. The former makes a component draggable, while the latter makes it droppable. These hooks are exported from the `@dnd-kit/core` package; install it by running the following command:
+In the demo above, the droppable area covers the entire page, enabling us to drop draggable elements anywhere. This is similar to canvas-based applications like Figma and Exalidraw. Alternatively, we can have an example with fixed, designated drop areas, like this:
+
+<DraggableAndDroppable />
+
+DndKit embraces this mental model, exposing three core primitives:
+
+- The `useDraggable` hook, which turns DOM elements into draggable sources that can be picked up, moved, and dropped over droppable containers.
+- The `useDroppable` hook, which sets up DOM elements as droppable areas that draggable elements can be dropped over.
+- The `<DndContext />`, which manages the interaction between draggable and droppable components via React Context API.
+
+These primitives are exported from the `@dnd-kit/core` package; you can install it by running:
 
 ```shell
 yarn add @dnd-kit/core
 ```
 
-To manage interactions between draggable and droppable components, `@dnd-kit/core` also exports a `<DndContext>` component. This component uses the React Context API to share data between draggable and droppable components, so we need to wrap them with it:
+Let's go over each of them in detail.
 
-```tsx {1, 7, 10}
+### Draggables
+
+Creating a draggable component is easy with the `useDraggable` hook. It takes an input object as an argument, which must include a unique `id`. It returns an object with several properties, of which we are currently interested in:
+
+1. `setNodeRef` - a ref we attach to the HTML element we want to make draggable. This is the essential part of how we provide dndkit with the element that needs to be dragged.
+2. `listeners` and `attributes` - objects we can spread on the HTML element to listen for a drag event.
+3. `transform` - an object with the x- and y-coordinates of a draggable element in 2D. We'll use this to update the `translate` property, allowing us to move the draggable component on the screen.
+
+Here is an example of how all these elements work together to create a droppable component:
+
+```tsx
+import { useDraggable } from "@dnd-kit/core";
+//CSS helper for generating CSS transform strings
+import { CSS } from "@dnd-kit/utilities";
+
+function Draggable() {
+  const { attributes, listeners, setNodeRef, transform } = useDraggable({
+    id: "unique-id",
+  });
+
+  return (
+    <button
+      ref={setNodeRef}
+      style={{
+        transform: CSS.Transform.toString(transform),
+      }}
+      {...listeners}
+      {...attributes}
+    >
+      {/* Render whatever you like within */}
+    </button>
+  );
+}
+```
+
+### Droppables
+
+The `useDroppable` hook is used to make DOM elements droppable. It takes an input object with a required unique `id` as an argument and returns an object with several properties. We are currently interested in two of these properties:
+
+1. `setNodeRef` - a ref we attach to the DOM element we want to make droppable. This is how we tell DndKit that an element is a drop area.
+2. `isOver` - a Boolean that is `true` if a droppable component is over the droppable component. We can use this to style droppable areas conditionally.
+
+```tsx
+import { useDroppable } from "@dnd-kit/core";
+
+function Droppable() {
+  const { setNodeRef } = useDroppable({
+    id: "unique-id",
+  });
+
+  return <div ref={setNodeRef}>DROPPABLE</div>;
+}
+```
+
+### DndContext
+
+To manage interactions between our draggable and droppable components, we need to wrap them in the `<DndContext>`. This component uses the React Context API to share data between our components. Let's wrap our draggable and droppable components:
+
+```tsx
 import { DndContext } from "@dnd-kit/core";
 import { Draggable } from "./Draggable";
 import { Droppable } from "./Droppable";
@@ -46,135 +109,26 @@ function App() {
 }
 ```
 
-### DndContext
+The `<DndContext>` manages interactions between draggable and droppable components by emitting events at different stages of a drag-and-drop interaction. The main events emitted are:
 
-The `<DndContext>` context is essential for managing interactions between draggable and droppable components, as well as emitting events at different stages of a drag and drop interaction. We can then react to these events and use the information to update the state of the draggable and droppable components in our UI. The events we can listen to are:
+- `onDragStart`, which triggers when a draggable is dragged and contains the DragStartEvent object with information about the element that has been dragged.
+- `onDragOver`, which triggers when a draggable item is moved over a droppable container and contains the DragOverEvent object with information about the draggable item and droppable container.
+- `onDragEnd`, which fires after a draggable item is dropped and contains information about the active draggable `id` and whether the draggable item was dropped `over`.
+- `onDragCancel`, which fires if a drag operation is cancelled, e.g. if the user presses `escape` while dragging a draggable item.
 
-- `onDragStart` triggers when a draggable is dragged. It contains the DragStartEvent object which contains information about the element that has just been dragged.
-- `onDragOver` triggers when a draggable item is moved over a droppable container. It contains the DragOverEvent object which contains information about the draggable item and droppable container which the draggable item was dropped over.
-- `onDragEnd` fires after a draggable item is dropped. This event contains information about the active draggable `id` along with information on whether the draggable item was dropped `over`.
-- `onDragCancel` fires if a drag operation is cancelled, for example, if the user presses `escape` while dragging a draggable item.
+We can respond to these events with handler functions, using the event data to update the state of our draggable and droppable components in the UI. This provides us with great flexibility in how we configure our components.
 
-You can see these events in action by trying out the demo below:
+You can see when the DndContext emits the different events by playing with the demo below:
 
 <DndContextEvents />
 
-### Draggables
-
-The `useDraggable` hook is used to make components draggable. It takes an input object as an argument, which must include a unique `id`. It returns an object with several properties, of which we are currently interested in:
-
-1. `setNodeRef` - a ref we attach to the HTML element we want to make draggable. This is the essential part of how we provide dndkit with the element that needs to be dragged.
-2. `listeners` and `attributes` - objects we can spread on the HTML element to listen for a drag event.
-3. `transform` - an object with the x- and y-coordinates of a draggable element in 2D. We'll use this to update the `translate` property, allowing us to move the draggable component on the screen.
-
-Here's an example of how all these elements come together:
-
-```tsx
-function Draggable(props: DraggableProps) {
-  const { attributes, listeners, setNodeRef, transform } = useDraggable({
-    id: props.id,
-  });
-
-  return (
-    <button
-      ref={setNodeRef}
-      style={{
-        transform: CSS.Transform.toString(transform),
-      }}
-      {...listeners}
-      {...attributes}
-    >
-      Draggable
-    </button>
-  );
-}
-```
-
-> 💡 Tip
-> setNodeRef is a callback ref - you can find out more of how they work here
-
-### Droppables
-
-The `useDroppable` hook is used to make components Droppable. Similar to `useDraggable`, it takes an input object as an argument, with a required unique `id`. It returns an object with several properties, of which we are currently interested in.
-
-1. `setNodeRef` - a ref we attach to the HTML element we want to make droppable. This is how we tell dndkit that an element is a drop area.
-2. `isOver` - a Boolean that is `true` if a droppable component is over the droppable component.
-
-Here is how of how all these elements come together:
-
-```tsx
-function Droppable(props: DroppableProps) {
-  const { setNodeRef, isOver } = useDroppable({
-    id: props.id,
-  });
-
-  return (
-    <div
-      ref={setNodeRef}
-      style={{
-        backgroundColor: isOver ? "lightblue" : "white",
-      }}
-    >
-      Droppable
-    </div>
-  );
-}
-```
-
 ## Examples
 
-Now that we've discussed the core concepts of the dndkit, let's go through examples of how to use them to create beautiful drag-and-drop interactions. We'll cover four common use cases found on the web:
+Now that we've discussed the core concepts of the Dndkit, let's go through examples of how to use them to create beautiful drag-and-drop interactions. We'll cover four common use cases found on the web:
 
-1. **Free Drag-and-Drop**: Drag and drop an element across the entire screen, like in canvas-based applications like Figma and Excalidraw.
-2. **Classic Drag-and-Drop**: Drag and drop items into one or more droppable areas.
-3. **Single Container Sortables**: Drag list items to change their order within a single container.
-4. **Multi Container Sortables**: Drag items between multiple containers, sort them, and sort the containers.
-5. **Sortables** which are usually lists where each list item is both draggable and droppable. And rearrange or sort as a single component is dragged.
+- **Free Drag-and-Drop**: Drag-and-drop elements across the entire screen, similar to canvas-based applications such as Figma and Excalidraw.
+- **Classic Drag-and-Drop**: Drag and drop items into one or more designated areas.
+- **Single Container Sortables**: Rearrange the order of list items within a single container by dragging them.
+- **Multi-Container Sortables**: Drag items between multiple Sortable containers
 
 ### Free Drag-and-Drop
-
-<DraggableAndDroppable />
-
-To build, we need to store the draggable component's data, including its x- and y-positions, in state. We'll leverage the `onDragEnd` event emitted by the **`<DndContext />`**. This function fires after a draggable item is dropped, and the event object passed to it contains data about the component. We can use this data to update the component's position in state.
-
-You can see how this is done with the interactive demo below:
-
-### Classic Drag-and-Drop
-
-<DraggableAndDroppable />
-
-To build this we’ll need both draggable and droppable components. We need an array of IDs of our droppable containers and a piece of state to track which droppable component our draggable component is over. We'll use the onDragEnd function to check if a draggable component is over a particular droppable component. If it is, we'll update the state and add the draggable component as a child of the droppable container in the UI.
-
-You can see how this is done with the interactive demo below:
-
-DnD Kit is an awesome library I recently discovered while working on the new dashboard at Super. It makes the complex task of creating performant Drag-and-Drop UI interactions easier, with some interesting patterns and concepts. I spent some time creating a lot of cool interactions with the library and wanted to share some of the things I learned.
-
-DnD Kit is an awesome library I recently discovered while working on the new dashboard at Super. It makes the complex task of creating performant Drag-and-Drop UI interactions easier, with some interesting patterns and concepts. I spent some time creating a lot of cool interactions with the library and wanted to share some of the things I learned.
-
-### Single Container Sortables
-
-<DraggableAndDroppable />
-
-To build this we’ll need both draggable and droppable components. We need an array of IDs of our droppable containers and a piece of state to track which droppable component our draggable component is over. We'll use the onDragEnd function to check if a draggable component is over a particular droppable component. If it is, we'll update the state and add the draggable component as a child of the droppable container in the UI.
-
-You can see how this is done with the interactive demo below:
-
-DnD Kit is an awesome library I recently discovered while working on the new dashboard at Super. It makes the complex task of creating performant Drag-and-Drop UI interactions easier, with some interesting patterns and concepts. I spent some time creating a lot of cool interactions with the library and wanted to share some of the things I learned.
-
-DnD Kit is an awesome library I recently discovered while working on the new dashboard at Super. It makes the complex task of creating performant Drag-and-Drop UI interactions easier, with some interesting patterns and concepts. I spent some time creating a lot of cool interactions with the library and wanted to share some of the things I learned.
-
-### Multi Container Sortables
-
-<DraggableAndDroppable />
-
-To build this we’ll need both draggable and droppable components. We need an array of IDs of our droppable containers and a piece of state to track which droppable component our draggable component is over. We'll use the onDragEnd function to check if a draggable component is over a particular droppable component. If it is, we'll update the state and add the draggable component as a child of the droppable container in the UI.
-
-You can see how this is done with the interactive demo below:
-
-DnD Kit is an awesome library I recently discovered while working on the new dashboard at Super. It makes the complex task of creating performant Drag-and-Drop UI interactions easier, with some interesting patterns and concepts. I spent some time creating a lot of cool interactions with the library and wanted to share some of the things I learned.
-
-DnD Kit is an awesome library I recently discovered while working on the new dashboard at Super. It makes the complex task of creating performant Drag-and-Drop UI interactions easier, with some interesting patterns and concepts. I spent some time creating a lot of cool interactions with the library and wanted to share some of the things I learned.
-
-> 👍 Success
->
-> The Context API is a great way to share data between components without having to pass props down the component tree. It's also a great way to avoid prop drilling. If you're not familiar with the Context API, I recommend reading [this article](https://kentcdodds.com/blog/how-to-use-react-context-effectively) by Kent C. Dodds.
